@@ -15,7 +15,8 @@
 sparseVector(x, i, length)
 }
 \arguments{
-  \item{x}{vector of the non zero entries.}
+  \item{x}{vector of the non zero entries; may be missing in which case a
+    \code{"nsparseVector"} will be returned.}
   \item{i}{integer vector (of the same length as \code{x}) specifying
     the indices of the non-zero (or non-\code{TRUE}) entries of the
     sparse vector.}
@@ -38,5 +39,9 @@ ss <- as(sx, "sparseVector")
 stopifnot(identical(ss,
    sparseVector(x = c(2, -1, -2, 3, 1, -3, 5, 3.2),
                 i = c(15L, 10:9, 3L,12L,8L,18L, 4L), length = 20L)))
+
+(ns <- sparseVector(i= c(7, 3, 2), length = 10))
+stopifnot(identical(ns,
+      new("nsparseVector", length = 10, i = c(2, 3, 7))))
 }
 \keyword{array}
